//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

option java_package = "com.intel.analytics.bigdl.friesian.serving.grpc.generated.ranking";
option java_outer_classname = "RankingProto";
option objc_class_prefix = "RTG";

package ranking;
import "google/protobuf/empty.proto";

// Interface exported by the server.
service Ranking {
    rpc doPredict(Content) returns (Prediction) {}
    rpc addModel(ModelMeta) returns (Status) {}
    rpc registerModel(ModelMeta) returns (Status) {}
    rpc deregisterModel(ModelMeta) returns (Status) {}
    rpc removeModel(ModelMeta) returns (Status) {}
    rpc getMetrics(google.protobuf.Empty) returns (ServerMessage) {}
    rpc resetMetrics(google.protobuf.Empty) returns (google.protobuf.Empty) {}
}

message Content {
    string encodedStr = 1;
}

message Prediction {
    string predictStr = 1;
}

message ServerMessage {
    string str = 1;
}

message ModelMeta {
    string path = 1;
    string version = 2;
}

message Status {
    bool success = 1;
}